brain/sources/prod-metadata/objects/Account/fields/Niche_Other__c.field-meta.xml
<CustomField>
    <fullName>Niche_Other__c</fullName>
    <label>Niche Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>