brain/sources/prod-metadata/objects/Account/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>