brain/sources/prod-metadata/objects/Account/fields/Notice_Period__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period__c</fullName>
    <description>Time required by candidate before they can start a new position. Used during job submissions to inform clients of availability timeline.</description>
    <inlineHelpText>Select how soon the candidate can start. Immediate means they can start right away. Update this field as situation changes.</inlineHelpText>
    <label>Notice Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>1 Week</fullName>
            </value>
            <value>
                <fullName>2 Weeks</fullName>
            </value>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>