brain/sources/prod-metadata/objects/Account/fields/Open_to_relocate__c.field-meta.xml
<CustomField>
    <fullName>Open_to_relocate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Open to relocate</label>
    <type>Checkbox</type>
</CustomField>