brain/sources/prod-metadata/objects/Account/fields/Other_Consultancies_Name__c.field-meta.xml
<CustomField>
    <fullName>Other_Consultancies_Name__c</fullName>
    <label>Other Consultancies Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>