brain/sources/prod-metadata/objects/Account/fields/Other_please_specify__c.field-meta.xml
<CustomField>
    <fullName>Other_please_specify__c</fullName>
    <label>Other (please specify)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>