brain/sources/prod-metadata/objects/Account/fields/Passport_Number__c.field-meta.xml
<CustomField>
    <fullName>Passport_Number__c</fullName>
    <label>Passport Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>