brain/sources/prod-metadata/objects/Account/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <description>Agreed payment terms with this B2B client. Net 30 means payment due 30 days after invoice.</description>
    <inlineHelpText>Select the agreed payment terms for this client. Net 30 is standard. Confirm with Finance team before updating this field.</inlineHelpText>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Net 15</fullName>
            </value>
            <value>
                <fullName>Net 30</fullName>
            </value>
            <value>
                <fullName>Net 45</fullName>
            </value>
            <value>
                <fullName>Net 60</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>