brain/sources/prod-metadata/objects/Account/fields/Preferred_Job_Locations__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Job_Locations__c</fullName>
    <label>Preferred Job Locations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>