brain/sources/prod-metadata/objects/Account/fields/Preferred_Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Job_Type__c</fullName>
    <label>Preferred Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>On-site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>