brain/sources/prod-metadata/objects/Account/fields/Preferred_Locations__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Locations__c</fullName>
    <description>Cities or states where candidate prefers to work for onsite or hybrid roles. Used for matching with location-specific job requirements.</description>
    <inlineHelpText>Enter preferred work locations separated by commas. Example: New Jersey, New York, Texas or Remote Only or Open to Relocation.</inlineHelpText>
    <label>Preferred Locations</label>
    <type>TextArea</type>
</CustomField>