brain/sources/prod-metadata/objects/Account/fields/Preferred_Training_Schedule_EST__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Training_Schedule_EST__c</fullName>
    <label>Preferred Training Schedule EST</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>9:30 AM – 11:30 AM EST</fullName>
            </value>
            <value>
                <fullName>11:30 AM – 1:30 PM EST</fullName>
            </value>
            <value>
                <fullName>2:30 PM – 4:30 PM EST</fullName>
            </value>
            <value>
                <fullName>4:30 PM – 6:30 PM EST</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>