brain/sources/prod-metadata/objects/Account/fields/Preferred_Work_Mode__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Work_Mode__c</fullName>
    <description>Candidate preferred working arrangement for job placements. Used to match preferences with job requirement work mode.</description>
    <inlineHelpText>Select the candidate preferred work arrangement. Remote = fully remote work. Hybrid = mix of remote and office. Onsite = full time at client.</inlineHelpText>
    <label>Preferred Work Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Remote</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Onsite&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>