brain/sources/prod-metadata/objects/Account/fields/Previously_Engaged_with_Other_Consultanc__c.field-meta.xml
<CustomField>
    <fullName>Previously_Engaged_with_Other_Consultanc__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Previously Engaged with Other Consultanc</label>
    <type>Checkbox</type>
</CustomField>