brain/sources/prod-metadata/objects/Account/fields/Profile_Notes__c.field-meta.xml
<CustomField>
    <fullName>Profile_Notes__c</fullName>
    <label>Profile Notes</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>