brain/sources/prod-metadata/objects/Account/fields/Project_Understanding_Document__c.field-meta.xml
<CustomField>
    <fullName>Project_Understanding_Document__c</fullName>
    <label>Project Understanding Document</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>