brain/sources/prod-metadata/objects/Account/fields/Reason_for_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Hold__c</fullName>
    <label>Reason for Hold</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>