brain/sources/prod-metadata/objects/Account/fields/Relocation_Other__c.field-meta.xml
<CustomField>
    <fullName>Relocation_Other__c</fullName>
    <label>Relocation Other</label>
    <length>100</length>
    <type>Text</type>
</CustomField>