brain/sources/prod-metadata/objects/Account/fields/Resume_Ready__c.field-meta.xml
<CustomField>
    <fullName>Resume_Ready__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates candidate resume is up to date, formatted, and ready for client submission. Submit flow checks this field before allowing submission.</description>
    <inlineHelpText>Check only after verifying candidate resume is current, properly formatted, and approved for client submission. Required before B2B submission.</inlineHelpText>
    <label>Resume Ready</label>
    <type>Checkbox</type>
</CustomField>