brain/sources/prod-metadata/objects/Account/fields/Salary__c.field-meta.xml
<CustomField>
    <fullName>Salary__c</fullName>
    <label>Salary %</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>