brain/sources/prod-metadata/objects/Account/fields/Salary_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Salary_Expectations__c</fullName>
    <label>Salary Expectations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>