brain/sources/prod-metadata/objects/Account/fields/Secondary_Phone__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone__c</fullName>
    <label>Secondary Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>