brain/sources/prod-metadata/objects/Account/fields/Select_Employee__c.field-meta.xml
<CustomField>
    <fullName>Select_Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Select Employee</label>
    <referenceTo>Recruiter__c</referenceTo>
    <relationshipLabel>Candidates (Select Employee)</relationshipLabel>
    <relationshipName>Candidates1</relationshipName>
    <type>Lookup</type>
</CustomField>