brain/sources/prod-metadata/objects/Account/fields/Slack_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Slack_User_Id__c</fullName>
    <externalId>true</externalId>
    <label>Slack User Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>