brain/sources/prod-metadata/objects/Account/fields/Sponsorship_Required_For_VISA__c.field-meta.xml
<CustomField>
    <fullName>Sponsorship_Required_For_VISA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sponsorship Required For VISA?</label>
    <type>Checkbox</type>
</CustomField>