brain/sources/prod-metadata/objects/Account/fields/Target_Achieved__c.field-meta.xml
<CustomField>
    <fullName>Target_Achieved__c</fullName>
    <description>Percentage of expected interviews achieved = Total interviews (from Interview object) / Expected interviews * 100. Compares Total_Number_of_Interview__c against Expected_Interviews_Target__c (the niche-based, monthly-accumulating target).</description>
    <formula>IF(
    OR(ISBLANK(Expected_Interviews_Target__c), Expected_Interviews_Target__c = 0),
    0,
    BLANKVALUE(Total_Number_of_Interview__c, 0) / Expected_Interviews_Target__c * 100
)</formula>
    <label>Target Achieved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>