brain/sources/prod-metadata/objects/Account/fields/Targeted_Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Experience_Level__c</fullName>
    <label>Targeted Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entry Level</fullName>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Mid-Senior level</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>