brain/sources/prod-metadata/objects/Account/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>AI/ML Engineer</fullName>
            </value>
            <value>
                <fullName>Automation Engineer</fullName>
            </value>
            <value>
                <fullName>AWS DevOps Engineer</fullName>
                <label>AWS Devops Engineer</label>
            </value>
            <value>
                <fullName>AWS Solutions Architect</fullName>
            </value>
            <value>
                <fullName>Azure DevOps Engineer</fullName>
                <label>Azure Devops Engineer</label>
            </value>
            <value>
                <fullName>Business &amp; Strategy Consultant</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Cloud Engineer</fullName>
            </value>
            <value>
                <fullName>Computer Support Associate</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
            <value>
                <fullName>Cybersecurity Engineer</fullName>
            </value>
            <value>
                <fullName>Data Engineer</fullName>
            </value>
            <value>
                <fullName>DevOps Engineer</fullName>
            </value>
            <value>
                <fullName>Director of Engineering</fullName>
            </value>
            <value>
                <fullName>Electrical Engineer</fullName>
            </value>
            <value>
                <fullName>Engineering Manager</fullName>
            </value>
            <value>
                <fullName>Financial Analyst</fullName>
            </value>
            <value>
                <fullName>Frontend UI Developer</fullName>
            </value>
            <value>
                <fullName>Full Stack Developer</fullName>
            </value>
            <value>
                <fullName>Healthcare Informatics</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Industrial Engineer</fullName>
            </value>
            <value>
                <fullName>IT Project Manager</fullName>
            </value>
            <value>
                <fullName>Java Developer</fullName>
            </value>
            <value>
                <fullName>Layout Engineer</fullName>
            </value>
            <value>
                <fullName>Lead Software Engineer</fullName>
            </value>
            <value>
                <fullName>Management Consultant</fullName>
            </value>
            <value>
                <fullName>Manufacturing Engineer</fullName>
                <label>Manufacturing engineer</label>
            </value>
            <value>
                <fullName>Mechanical Engineer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>