brain/sources/prod-metadata/objects/Account/fields/Total_Internal_Interviews_Excl_Intake__c.field-meta.xml
<CustomField>
    <fullName>Total_Internal_Interviews_Excl_Intake__c</fullName>
    <label>Total Internal Interviews Excl Intake</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>