brain/sources/prod-metadata/objects/Account/fields/Total_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Interviews__c</fullName>
    <label>Total Interviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>