brain/sources/prod-metadata/objects/Account/fields/Total_no_of_Interviews_Initial_calls__c.field-meta.xml
<CustomField>
    <fullName>Total_no_of_Interviews_Initial_calls__c</fullName>
    <label>Total no. of Interviews &amp; Initial calls</label>
    <summaryForeignKey>Interview__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>