brain/sources/prod-metadata/objects/Account/fields/Total_Number_of_Applications__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Applications__c</fullName>
    <label>Total Number of Applications</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>