brain/sources/prod-metadata/objects/Account/fields/Total_Number_of_Initial_Calls__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Initial_Calls__c</fullName>
    <label>Total Number of Initial Calls</label>
    <summaryFilterItems>
        <field>Interview__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Initial Call</value>
    </summaryFilterItems>
    <summaryForeignKey>Interview__c.Candidate__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>