brain/sources/prod-metadata/objects/Account/fields/Total_Number_of_Interviews__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Interviews__c</fullName>
    <label>Total Number of Interviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>