brain/sources/prod-metadata/objects/Account/fields/Total_Training_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Total_Training_Sessions__c</fullName>
    <label>Total Training Sessions</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>