brain/sources/prod-metadata/objects/Account/fields/Upfront_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Amount__c</fullName>
    <label>Upfront Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>