brain/sources/prod-metadata/objects/Account/fields/Work_Authorization_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Work_Authorization_Expiry_Date__c</fullName>
    <label>Work Authorization Expiry Date</label>
    <type>Date</type>
</CustomField>